docs: clean up and add rest of CRC functions to kernel-api.rst
Add the rest of the CRC library functions to kernel-api.

- try to clarify crc32() by adding '@' to a function parameter
- reorder kernel-api CRC functions to be less random
- add more CRC functions to kernel-api
- correct the function parameter names in several places

Signed-off-by: Randy Dunlap <rdunlap@infradead.org>
Signed-off-by: Jonathan Corbet <corbet@lwn.net>
Signed-off-by: Andrey Cherepkov <andreiskull@gmail.com>

--- a/Documentation/DocBook/kernel-api.tmpl
+++ b/Documentation/DocBook/kernel-api.tmpl
@@ -90,11 +90,12 @@ X!Ilib/string.c
      </sect1>
 
      <sect1 id="crc"><title>CRC Functions</title>
+!Elib/crc4.c
 !Elib/crc7.c
 !Elib/crc16.c
-!Elib/crc-itu-t.c
 !Elib/crc32.c
 !Elib/crc-ccitt.c
+!Elib/crc-itu-t.c
      </sect1>
 
      <sect1 id="idr"><title>idr/ida Functions</title>
